# study-LD-RZ

./: .gitignore  CMakeLists.txt  README.md  candidate.list
CGI/: BaseCNNNet.h  BaseCNNPlayoutGenerator.cpp  BaseCNNPlayoutGenerator.h  BaseJobQueue.h  BasicType.h  BoardMoveStack.h  BoardStatus.h  BoardTranspositionTable.h  BoundingBox.h  CGI.vcxproj  CGI.vcxproj.filters  CNNJobQueue.h  CandidateEntry.h  CandidateList.h  Color.h  ColorMessage.h  DCNNNetCollection.h  DCNNNetResult.h  DbHashTable.cpp  DbHashTable.h  DbMove.cpp  DbMove.h  DbOpening.cpp  DbOpening.h  Dual.h  FeatureIndexList.h  FeatureList.h  FeaturePtrList.h  FileDirectoryExplorer.h  GameInfo.h  GenSgf.cpp  GenSgf.h  GtpColorGradient.h  GtpRGBColor.h  HappyGoMain.cpp  IsomorphicMinHashKey.cpp  IsomorphicMinHashKey.h  LinkListHashTable.h  MoveLocation.cpp  MoveLocation.h  (+256 more)
MCTPS/: BaseDecisionMaker.h  BaseGtpEngine.cpp  BaseGtpEngine.h  BasePlayoutAgent.h  BasePrunePolicy.h  BaseRootShifter.h  BaseStopCondition.h  BaseThreadState.h  BaseUctAccessor.h  BaseUctNode.h  BitBoard.h  ClusterLogger.h  Configure.cpp  Configure.h  ConfigureLoader.cpp  ConfigureLoader.h  HashKey64.h  Invoker.cpp  Invoker.h  Logger.cpp  Logger.h  MasterThread.h  MonteCarlo.h  NodeAllocator.h  NodePage.h  NodePtr.h  NodeRecycler.h  PageAllocator.h  ProgramOption.cpp  ProgramOption.h  Random.cpp  Random.h  SlaveThread.h  SpinLock.h  StatisticData.h  TeeStream.h  ThreadSharedData.h  TimeSystem.cpp  TimeSystem.h  UctChildIterator.h  (+5 more)
PatternGenerator/: Main.cpp  PatternGenerator.cpp  PatternGenerator.h
cfg/: RZS-PT.cfg  RZS-TT.cfg
(+18 files in other folders)
