
cmake_minimum_required(VERSION 2.8)

project(CGI)

set(FRAMEWORK_DIR ${PROJECT_SOURCE_DIR}/MCTPS)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -g -mpopcnt -std=c++14")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")

IF(STATIC_LINK STREQUAL "1")
	set(CMAKE_EXE_LINKER_FLAGS -static) 
ENDIF()

FIND_PACKAGE(Boost COMPONENTS thread random)
FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(${FRAMEWORK_DIR} ${Boost_INCLUDE_DIR})

ADD_SUBDIRECTORY(MCTPS)
ADD_SUBDIRECTORY(CGI)

